--- a/aiyagari_jax.ipynb
+++ b/aiyagari_jax.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "18f93216",
+   "id": "92679620",
    "metadata": {},
    "source": [
     "# The Aiyagari Model"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a178a7f3",
+   "id": "d444ae48",
    "metadata": {},
    "source": [
     "# GPU\n",
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bf05cd82",
+   "id": "602bcab7",
    "metadata": {},
    "source": [
     "## Overview\n",
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bc701e3e",
+   "id": "1a130591",
    "metadata": {},
    "source": [
     "### References\n",
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8cc7c6d8",
+   "id": "91e8d154",
    "metadata": {},
    "source": [
     "### Preliminaries\n",
@@ -75,7 +75,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "24194436",
+   "id": "e39cbb89",
    "metadata": {
     "hide-output": false
    },
@@ -91,7 +91,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "decdd726",
+   "id": "77af6ed5",
    "metadata": {},
    "source": [
     "Let’s check the GPU we are running"
@@ -100,7 +100,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4248a292",
+   "id": "fb43c9d2",
    "metadata": {
     "hide-output": false
    },
@@ -111,7 +111,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d1a86096",
+   "id": "d3e7f32a",
    "metadata": {},
    "source": [
     "We will use 64 bit floats with JAX in order to increase the precision."
@@ -120,7 +120,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e0682290",
+   "id": "75c96496",
    "metadata": {
     "hide-output": false
    },
@@ -131,7 +131,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "31d714af",
+   "id": "d61e7b48",
    "metadata": {},
    "source": [
     "We will use the following function to compute stationary distributions of stochastic matrices.  (For a reference to the algorithm, see p. 88 of [Economic Dynamics](https://johnstachurski.net/edtc).)"
@@ -140,7 +140,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a36e91fb",
+   "id": "f3c3abe2",
    "metadata": {
     "hide-output": false
    },
@@ -157,7 +157,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9eeb1716",
+   "id": "528bf067",
    "metadata": {},
    "source": [
     "## Firms\n",
@@ -197,7 +197,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "613180f9",
+   "id": "04997627",
    "metadata": {
     "hide-output": false
    },
@@ -218,7 +218,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4b34b350",
+   "id": "986210d3",
    "metadata": {},
    "source": [
     "From the first-order condition with respect to capital, the firm’s inverse demand for capital is\n",
@@ -233,7 +233,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e7c69e26",
+   "id": "43b481da",
    "metadata": {
     "hide-output": false
    },
@@ -250,7 +250,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "33f6e5db",
+   "id": "b1f03184",
    "metadata": {},
    "source": [
     "Using [(18.1)](#equation-equation-aiy-rgk) and the firm’s first-order condition for labor,\n",
@@ -265,7 +265,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "326618cb",
+   "id": "0811fc69",
    "metadata": {
     "hide-output": false
    },
@@ -281,7 +281,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "de7b8b9c",
+   "id": "d569882e",
    "metadata": {},
    "source": [
     "## Households\n",
@@ -325,7 +325,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2afcccfc",
+   "id": "cc00bb2e",
    "metadata": {},
    "source": [
     "### Primitives and Operators\n",
@@ -340,7 +340,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8a2291f9",
+   "id": "8d230253",
    "metadata": {
     "hide-output": false
    },
@@ -353,7 +353,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8992e4dd",
+   "id": "d98192be",
    "metadata": {
     "hide-output": false
    },
@@ -376,7 +376,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a2aac24d",
+   "id": "84187792",
    "metadata": {},
    "source": [
     "For now we assume that $ u(c) = \\log(c) $.\n",
@@ -387,7 +387,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "13842c8b",
+   "id": "14a973c7",
    "metadata": {
     "hide-output": false
    },
@@ -398,7 +398,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "69b23369",
+   "id": "a0ef9faa",
    "metadata": {},
    "source": [
     "Here’s a tuple that stores the wage rate and interest rate, as well as a function that creates a price namedtuple with default values."
@@ -407,7 +407,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "df1cf2e4",
+   "id": "d658f332",
    "metadata": {
     "hide-output": false
    },
@@ -422,7 +422,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1ae6d46d",
+   "id": "4c57f4a0",
    "metadata": {},
    "source": [
     "Now we set up a vectorized version of the right-hand side of the Bellman equation\n",
@@ -438,7 +438,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e104bf82",
+   "id": "f4c440f5",
    "metadata": {
     "hide-output": false
    },
@@ -468,7 +468,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "62afdb5d",
+   "id": "e4d27ec2",
    "metadata": {},
    "source": [
     "The next function computes greedy policies."
@@ -477,7 +477,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e54cbc1b",
+   "id": "2b31eb7c",
    "metadata": {
     "hide-output": false
    },
@@ -495,7 +495,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0fe055b2",
+   "id": "31ff193c",
    "metadata": {},
    "source": [
     "The following function computes the array $ r_{\\sigma} $ which gives current\n",
@@ -505,7 +505,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "72027799",
+   "id": "2e36c8f2",
    "metadata": {
     "hide-output": false
    },
@@ -538,7 +538,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3da79b92",
+   "id": "aadcc973",
    "metadata": {},
    "source": [
     "The value $ v_{\\sigma} $ of a policy $ \\sigma $ is defined as\n",
@@ -563,7 +563,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ec6b68bd",
+   "id": "445b7e0e",
    "metadata": {
     "hide-output": false
    },
@@ -590,7 +590,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "17fbb2ee",
+   "id": "7796d81a",
    "metadata": {},
    "source": [
     "The next function computes the lifetime value of a given policy."
@@ -599,7 +599,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "be5f5852",
+   "id": "5eb0da3e",
    "metadata": {
     "hide-output": false
    },
@@ -622,7 +622,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6f4f989f",
+   "id": "0f18af1d",
    "metadata": {},
    "source": [
     "Here’s the Howard policy iteration."
@@ -631,7 +631,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "80fdbc1d",
+   "id": "6b0630d2",
    "metadata": {
     "hide-output": false
    },
@@ -664,7 +664,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ea48f719",
+   "id": "b66f7b40",
    "metadata": {},
    "source": [
     "As a first example of what we can do, let’s compute and plot an optimal accumulation policy at fixed prices."
@@ -673,7 +673,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "37c948e4",
+   "id": "5ecde537",
    "metadata": {
     "hide-output": false
    },
@@ -687,7 +687,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "af3d8f92",
+   "id": "bcfc1845",
    "metadata": {
     "hide-output": false
    },
@@ -699,7 +699,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "459fd9d3",
+   "id": "89ee4b8f",
    "metadata": {
     "hide-output": false
    },
@@ -711,7 +711,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c0673a8c",
+   "id": "d13cbecc",
    "metadata": {
     "hide-output": false
    },
@@ -722,7 +722,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0a4ecef0",
+   "id": "8c47c831",
    "metadata": {},
    "source": [
     "The next plot shows asset accumulation policies at different values of the exogenous state."
@@ -731,7 +731,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4920b337",
+   "id": "47476402",
    "metadata": {
     "hide-output": false
    },
@@ -753,7 +753,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b8c74475",
+   "id": "a44fc085",
    "metadata": {},
    "source": [
     "### Capital Supply\n",
@@ -772,7 +772,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "63869892",
+   "id": "d768b92c",
    "metadata": {
     "hide-output": false
    },
@@ -807,7 +807,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f0b89f3e",
+   "id": "ffc1436a",
    "metadata": {},
    "source": [
     "Let’s give this a test run."
@@ -816,7 +816,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0b590e75",
+   "id": "4a4f2c94",
    "metadata": {
     "hide-output": false
    },
@@ -828,7 +828,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "af333c1b",
+   "id": "79fa990f",
    "metadata": {
     "hide-output": false
    },
@@ -843,7 +843,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9b881a00",
+   "id": "9b530383",
    "metadata": {},
    "source": [
     "The distribution should sum to one:"
@@ -852,7 +852,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a3dc5b28",
+   "id": "4e08bae3",
    "metadata": {
     "hide-output": false
    },
@@ -863,7 +863,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "983daa5a",
+   "id": "d244b8cf",
    "metadata": {},
    "source": [
     "The next function computes aggregate capital supply by households under policy $ \\sigma $, given wages and interest rates."
@@ -872,7 +872,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "04d0e527",
+   "id": "8bfae041",
    "metadata": {
     "hide-output": false
    },
@@ -890,7 +890,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a5b12acc",
+   "id": "19b08fb8",
    "metadata": {},
    "source": [
     "## Equilibrium\n",
@@ -920,7 +920,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "34c7c3e0",
+   "id": "75d2b395",
    "metadata": {
     "hide-output": false
    },
@@ -939,7 +939,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9e4ddc96",
+   "id": "b2da89c9",
    "metadata": {},
    "source": [
     "### Visual inspection\n",
@@ -950,7 +950,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cbc6b0da",
+   "id": "eb9b6791",
    "metadata": {
     "hide-output": false
    },
@@ -966,7 +966,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "971c1424",
+   "id": "628c3f0f",
    "metadata": {
     "hide-output": false
    },
@@ -982,7 +982,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ac828dd9",
+   "id": "834ec58c",
    "metadata": {},
    "source": [
     "### Computing the equilibrium\n",
@@ -1001,7 +1001,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "83aed368",
+   "id": "7e0c13ef",
    "metadata": {
     "hide-output": false
    },
@@ -1026,7 +1026,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "77f10da3",
+   "id": "0dce207d",
    "metadata": {
     "hide-output": false
    },
@@ -1043,7 +1043,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c7fb4084",
+   "id": "a9d74e49",
    "metadata": {},
    "source": [
     "This is not very fast, given how quickly we can solve the household problem.\n",
@@ -1055,7 +1055,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b8080a0a",
+   "id": "3de0811d",
    "metadata": {},
    "source": [
     "## Exercises"
@@ -1063,7 +1063,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "55be9dde",
+   "id": "b4441c0d",
    "metadata": {},
    "source": [
     "## Exercise 18.1\n",
@@ -1080,7 +1080,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5ccf085c",
+   "id": "f5e71dbc",
    "metadata": {},
    "source": [
     "## Solution to[ Exercise 18.1](https://jax.quantecon.org/#aiyagari-ex1)"
@@ -1089,7 +1089,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a5f8e77f",
+   "id": "e1f4938b",
    "metadata": {
     "hide-output": false
    },
@@ -1100,7 +1100,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "34a0cd13",
+   "id": "2c027283",
    "metadata": {},
    "source": [
     "We use bisection to find the zero of the function $ h(k) = k - G(k) $."
@@ -1109,7 +1109,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "55f94704",
+   "id": "bde7009b",
    "metadata": {
     "hide-output": false
    },
@@ -1123,7 +1123,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3f2de872",
+   "id": "4168f685",
    "metadata": {
     "hide-output": false
    },
@@ -1140,7 +1140,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6b552c01",
+   "id": "8ecf0c3c",
    "metadata": {},
    "source": [
     "Bisection seems to be faster than the damped iteration scheme."
@@ -1148,7 +1148,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f1f70a01",
+   "id": "b56c7b0c",
    "metadata": {},
    "source": [
     "## Exercise 18.2\n",
@@ -1161,7 +1161,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "db636aee",
+   "id": "553f30f2",
    "metadata": {
     "hide-output": false
    },
@@ -1172,7 +1172,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b7720484",
+   "id": "341db743",
    "metadata": {},
    "source": [
     "## Solution to[ Exercise 18.2](https://jax.quantecon.org/#aiyagari-ex2)"
@@ -1181,7 +1181,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e439672b",
+   "id": "13f83be3",
    "metadata": {
     "hide-output": false
    },
@@ -1200,7 +1200,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "48d54c23",
+   "id": "d61ea8ef",
    "metadata": {
     "hide-output": false
    },
@@ -1215,7 +1215,7 @@
   }
  ],
  "metadata": {
-  "date": 1747018760.5526206,
+  "date": 1747720849.98634,
   "filename": "aiyagari_jax.md",
   "kernelspec": {
    "display_name": "Python",
