--- a/markov_asset.ipynb
+++ b/markov_asset.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "e24fbe99",
+   "id": "a0bad234",
    "metadata": {},
    "source": [
     "# An Asset Pricing Problem"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6015c53e",
+   "id": "28ad6ca7",
    "metadata": {},
    "source": [
     "# GPU\n",
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ae8f39cd",
+   "id": "1ceea2cb",
    "metadata": {},
    "source": [
     "## Overview\n",
@@ -51,7 +51,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a282c3cb",
+   "id": "1107dd94",
    "metadata": {
     "hide-output": false
    },
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e26a8f14",
+   "id": "1f487719",
    "metadata": {},
    "source": [
     "In addition to JAX and Anaconda, this lecture will need the following libraries:"
@@ -71,7 +71,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a316cc22",
+   "id": "0141081b",
    "metadata": {
     "hide-output": false
    },
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e793127a",
+   "id": "c29032c5",
    "metadata": {},
    "source": [
     "Below we use the following imports"
@@ -91,7 +91,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7786d728",
+   "id": "225274b1",
    "metadata": {
     "hide-output": false
    },
@@ -109,7 +109,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ef2078f8",
+   "id": "b95ebdba",
    "metadata": {},
    "source": [
     "We will use 64 bit floats with JAX in order to increase precision."
@@ -118,7 +118,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b5e494cb",
+   "id": "fe9d2a0c",
    "metadata": {
     "hide-output": false
    },
@@ -129,7 +129,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0c8a86b1",
+   "id": "c6734a11",
    "metadata": {},
    "source": [
     "## Pricing a single payoff\n",
@@ -181,7 +181,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "16e8589a",
+   "id": "b78d953b",
    "metadata": {},
    "source": [
     "## Pricing a cash flow\n",
@@ -239,7 +239,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "75b930f5",
+   "id": "c80e2abf",
    "metadata": {},
    "source": [
     "## Choosing the stochastic discount factor\n",
@@ -282,7 +282,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "22795102",
+   "id": "c3ffc5e0",
    "metadata": {},
    "source": [
     "## Solving for the price-dividend ratio\n",
@@ -450,7 +450,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a81024d3",
+   "id": "9aac5d1b",
    "metadata": {},
    "source": [
     "## Code\n",
@@ -463,7 +463,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5652d5ae",
+   "id": "2fc26c41",
    "metadata": {
     "hide-output": false
    },
@@ -497,7 +497,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9ba3cab9",
+   "id": "bcf10e86",
    "metadata": {},
    "source": [
     "The next function verifies that the spectral radius of a given matrix is $ < 1 $."
@@ -506,7 +506,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e1f9a124",
+   "id": "17760f32",
    "metadata": {
     "hide-output": false
    },
@@ -522,7 +522,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "99e5f060",
+   "id": "867cbb0a",
    "metadata": {},
    "source": [
     "In what follows we assume that $ \\{X_t\\} $, the state process, is a discretization of the AR(1) process\n",
@@ -541,7 +541,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "61e040de",
+   "id": "6cd6592a",
    "metadata": {
     "hide-output": false
    },
@@ -571,7 +571,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1c1ac072",
+   "id": "8ac3775a",
    "metadata": {},
    "source": [
     "Our first step is to construct the matrix $ K $ defined in [(9.15)](#equation-eq-ntecxdk).\n",
@@ -582,7 +582,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "63eb1c3f",
+   "id": "6ca2c127",
    "metadata": {
     "hide-output": false
    },
@@ -603,7 +603,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b3a6ee69",
+   "id": "cf5a1dcc",
    "metadata": {},
    "source": [
     "To exploit the parallelization capabilities of JAX, let’s also write a vectorized (i.e., loop-free) implementation."
@@ -612,7 +612,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b79fa8cc",
+   "id": "9aa41052",
    "metadata": {
     "hide-output": false
    },
@@ -632,7 +632,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4964310e",
+   "id": "e4b4a674",
    "metadata": {},
    "source": [
     "These two functions produce the same output:"
@@ -641,7 +641,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "72d978d9",
+   "id": "15c3ac16",
    "metadata": {
     "hide-output": false
    },
@@ -655,7 +655,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "35d57350",
+   "id": "77e9e784",
    "metadata": {},
    "source": [
     "Now we can compute the price-dividend ratio:"
@@ -664,7 +664,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "11890ec1",
+   "id": "896398e5",
    "metadata": {
     "hide-output": false
    },
@@ -701,7 +701,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "71451538",
+   "id": "0121d802",
    "metadata": {},
    "source": [
     "Here’s a plot of $ v $ as a function of the state for several values of $ \\gamma $."
@@ -710,7 +710,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fcb8d382",
+   "id": "7bfd23f1",
    "metadata": {
     "hide-output": false
    },
@@ -735,7 +735,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c766739d",
+   "id": "82ff3ee3",
    "metadata": {},
    "source": [
     "Notice that $ v $ is decreasing in each case.\n",
@@ -748,7 +748,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "375fb5b2",
+   "id": "5f517c43",
    "metadata": {},
    "source": [
     "## An Extended Example\n",
@@ -894,7 +894,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ef03e991",
+   "id": "e0e0b86c",
    "metadata": {},
    "source": [
     "## Numpy Version\n",
@@ -915,7 +915,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "245c5934",
+   "id": "ca31e684",
    "metadata": {
     "hide-output": false
    },
@@ -960,7 +960,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "394cd07c",
+   "id": "62b42176",
    "metadata": {},
    "source": [
     "Now we provide a function to compute the matrix $ A $."
@@ -969,7 +969,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "39ce6ed5",
+   "id": "f5836398",
    "metadata": {
     "hide-output": false
    },
@@ -998,7 +998,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4344de7a",
+   "id": "07f4b356",
    "metadata": {},
    "source": [
     "Here’s our function to compute the price-dividend ratio for the stochastic volatility model."
@@ -1007,7 +1007,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c1702382",
+   "id": "a9f4225b",
    "metadata": {
     "hide-output": false
    },
@@ -1050,7 +1050,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "19314c39",
+   "id": "c0627ab5",
    "metadata": {},
    "source": [
     "Let’s create an instance of the model and solve it."
@@ -1059,7 +1059,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "afd873c3",
+   "id": "7cef62e6",
    "metadata": {
     "hide-output": false
    },
@@ -1071,7 +1071,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e997d95a",
+   "id": "41ad9afe",
    "metadata": {},
    "source": [
     "Let’s run it to compile."
@@ -1080,7 +1080,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b273b144",
+   "id": "a3ada347",
    "metadata": {
     "hide-output": false
    },
@@ -1094,7 +1094,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "13110fad",
+   "id": "7c5fc0f8",
    "metadata": {},
    "source": [
     "Let’s run it again to remove the compile."
@@ -1103,7 +1103,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "00e5ea25",
+   "id": "0a279259",
    "metadata": {
     "hide-output": false
    },
@@ -1117,7 +1117,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f6f18853",
+   "id": "a1331926",
    "metadata": {},
    "source": [
     "Here are some plots of the solution $ v $ along the three dimensions."
@@ -1126,7 +1126,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2a796ed5",
+   "id": "c91ae95b",
    "metadata": {
     "hide-output": false
    },
@@ -1143,7 +1143,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "813691f0",
+   "id": "7c3b8120",
    "metadata": {
     "hide-output": false
    },
@@ -1160,7 +1160,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b34fce34",
+   "id": "a53ece19",
    "metadata": {
     "hide-output": false
    },
@@ -1176,7 +1176,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ee07a06f",
+   "id": "217191de",
    "metadata": {},
    "source": [
     "## JAX Version\n",
@@ -1189,7 +1189,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1207cb4d",
+   "id": "c9512130",
    "metadata": {
     "hide-output": false
    },
@@ -1213,7 +1213,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "afe90485",
+   "id": "9a535e39",
    "metadata": {},
    "source": [
     "Here’s a function to compute $ A $.\n",
@@ -1226,7 +1226,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "acae0632",
+   "id": "40618401",
    "metadata": {
     "hide-output": false
    },
@@ -1255,7 +1255,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "eead7d6e",
+   "id": "91770efd",
    "metadata": {},
    "source": [
     "Here’s the function that computes the solution."
@@ -1264,7 +1264,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "04e9ba6d",
+   "id": "a059c6f0",
    "metadata": {
     "hide-output": false
    },
@@ -1303,7 +1303,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "31a03519",
+   "id": "0ba97ec3",
    "metadata": {},
    "source": [
     "Now let’s target these functions for JIT-compilation, while using `static_argnums` to indicate that the function will need to be recompiled when `shapes` changes."
@@ -1312,7 +1312,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0b342c81",
+   "id": "ea4f3811",
    "metadata": {
     "hide-output": false
    },
@@ -1325,7 +1325,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "00b50dbd",
+   "id": "f4c60736",
    "metadata": {
     "hide-output": false
    },
@@ -1339,7 +1339,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f4bb5ef6",
+   "id": "37c66379",
    "metadata": {},
    "source": [
     "Let’s see how long it takes to run with compile time included."
@@ -1348,7 +1348,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d0297bae",
+   "id": "27505662",
    "metadata": {
     "hide-output": false
    },
@@ -1362,7 +1362,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fd166c13",
+   "id": "23ff0d50",
    "metadata": {},
    "source": [
     "And now let’s see without compile time."
@@ -1371,7 +1371,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d49a838f",
+   "id": "e2c84470",
    "metadata": {
     "hide-output": false
    },
@@ -1385,7 +1385,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d5ab2d7b",
+   "id": "f08326b1",
    "metadata": {},
    "source": [
     "Here’s the ratio of times:"
@@ -1394,7 +1394,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2b5ce445",
+   "id": "34e4a773",
    "metadata": {
     "hide-output": false
    },
@@ -1405,7 +1405,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7538b245",
+   "id": "dc093ef9",
    "metadata": {},
    "source": [
     "Let’s check that the NumPy and JAX versions realize the same solution."
@@ -1414,7 +1414,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a192743f",
+   "id": "e3216d61",
    "metadata": {
     "hide-output": false
    },
@@ -1427,7 +1427,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b6f8029b",
+   "id": "f162ff37",
    "metadata": {},
    "source": [
     "## A memory-efficient JAX version\n",
@@ -1444,7 +1444,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1fe33574",
+   "id": "935a933e",
    "metadata": {
     "hide-output": false
    },
@@ -1472,7 +1472,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a750a3be",
+   "id": "c4619dc4",
    "metadata": {},
    "source": [
     "Now we write a version of the solution function for the price-dividend ratio\n",
@@ -1482,7 +1482,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0ea66801",
+   "id": "cf15f0d7",
    "metadata": {
     "hide-output": false
    },
@@ -1504,7 +1504,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "32de4ec0",
+   "id": "1afb3b3a",
    "metadata": {},
    "source": [
     "Let’s target these functions for JIT compilation."
@@ -1513,7 +1513,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1e0d21de",
+   "id": "69756f3d",
    "metadata": {
     "hide-output": false
    },
@@ -1525,7 +1525,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a7cf6b71",
+   "id": "83d66ee4",
    "metadata": {},
    "source": [
     "Let’s time the solution with compile time included."
@@ -1534,7 +1534,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "88074d1e",
+   "id": "28ebe7c8",
    "metadata": {
     "hide-output": false
    },
@@ -1548,7 +1548,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "36309c1b",
+   "id": "2c218f4d",
    "metadata": {},
    "source": [
     "And now let’s see without compile time."
@@ -1557,7 +1557,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a3963f0a",
+   "id": "b30a871a",
    "metadata": {
     "hide-output": false
    },
@@ -1571,7 +1571,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cecf0c06",
+   "id": "ef1593ad",
    "metadata": {},
    "source": [
     "Let’s verify the solution again:"
@@ -1580,7 +1580,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5876f481",
+   "id": "dcd8399a",
    "metadata": {
     "hide-output": false
    },
@@ -1591,7 +1591,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f912e7a7",
+   "id": "f7879606",
    "metadata": {},
    "source": [
     "Here’s the ratio of times between memory-efficient and direct version:"
@@ -1600,7 +1600,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8700900b",
+   "id": "a1310a02",
    "metadata": {
     "hide-output": false
    },
@@ -1611,7 +1611,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fe4b1486",
+   "id": "6253fcac",
    "metadata": {},
    "source": [
     "The speed is somewhat faster and, moreover, we can now work with much larger grids.\n",
@@ -1622,7 +1622,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "12374716",
+   "id": "7ca7c987",
    "metadata": {
     "hide-output": false
    },
@@ -1639,7 +1639,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a6b22ee6",
+   "id": "0c941f3b",
    "metadata": {},
    "source": [
     "The solution is computed relatively quickly and without memory issues.\n",
@@ -1650,7 +1650,7 @@
   }
  ],
  "metadata": {
-  "date": 1747018761.3161886,
+  "date": 1747720850.73804,
   "filename": "markov_asset.md",
   "kernelspec": {
    "display_name": "Python",
