--- a/opt_savings_2.ipynb
+++ b/opt_savings_2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "8ce04a36",
+   "id": "046cc90d",
    "metadata": {},
    "source": [
     "# Optimal Savings II: Alternative Algorithms"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9abab9f8",
+   "id": "69f4c495",
    "metadata": {},
    "source": [
     "# GPU\n",
@@ -62,7 +62,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9875bbea",
+   "id": "9164c602",
    "metadata": {
     "hide-output": false
    },
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5003b8b6",
+   "id": "882ca7b8",
    "metadata": {},
    "source": [
     "We will use the following imports:"
@@ -82,7 +82,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b45d4914",
+   "id": "3f44c9c7",
    "metadata": {
     "hide-output": false
    },
@@ -97,7 +97,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d2ad7a27",
+   "id": "a7cef907",
    "metadata": {},
    "source": [
     "Let’s check the GPU we are running."
@@ -106,7 +106,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b0c2d021",
+   "id": "4cc61f6c",
    "metadata": {
     "hide-output": false
    },
@@ -117,7 +117,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6a566de1",
+   "id": "89615cb7",
    "metadata": {},
    "source": [
     "We’ll use 64 bit floats to gain extra precision."
@@ -126,7 +126,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0d8d896d",
+   "id": "6cca224b",
    "metadata": {
     "hide-output": false
    },
@@ -137,7 +137,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0ea40d5a",
+   "id": "2ff1d2e8",
    "metadata": {},
    "source": [
     "## Model primitives\n",
@@ -150,7 +150,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "370b4bb1",
+   "id": "16c0c07c",
    "metadata": {
     "hide-output": false
    },
@@ -180,7 +180,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "75dcd2e0",
+   "id": "e651facb",
    "metadata": {},
    "source": [
     "Here’s the right hand side of the Bellman equation:"
@@ -189,7 +189,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "93ca5dc7",
+   "id": "82237564",
    "metadata": {
     "hide-output": false
    },
@@ -214,7 +214,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "031c61de",
+   "id": "bd614f5b",
    "metadata": {},
    "source": [
     "Now we successively apply `vmap` to vectorize $ B $ by simulating nested loops."
@@ -223,7 +223,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dcfa271e",
+   "id": "1426ccbb",
    "metadata": {
     "hide-output": false
    },
@@ -236,7 +236,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1004e582",
+   "id": "0d18fbec",
    "metadata": {},
    "source": [
     "Here’s a fully vectorized version of $ B $."
@@ -245,7 +245,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6f7612af",
+   "id": "6a432e5f",
    "metadata": {
     "hide-output": false
    },
@@ -261,7 +261,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bd3371e0",
+   "id": "69ea7b49",
    "metadata": {},
    "source": [
     "## Operators\n",
@@ -272,7 +272,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5e9e32e5",
+   "id": "9ccb3ace",
    "metadata": {
     "hide-output": false
    },
@@ -287,7 +287,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8c2915a2",
+   "id": "5f80aece",
    "metadata": {},
    "source": [
     "The next function computes a $ v $-greedy policy given $ v $"
@@ -296,7 +296,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a3bf5f7e",
+   "id": "3eabb313",
    "metadata": {
     "hide-output": false
    },
@@ -311,7 +311,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e7bcea0e",
+   "id": "ac2a5c2d",
    "metadata": {},
    "source": [
     "We define a function to compute the current rewards $ r_\\sigma $ given policy $ \\sigma $,\n",
@@ -325,7 +325,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ee957fa4",
+   "id": "3c26a050",
    "metadata": {
     "hide-output": false
    },
@@ -353,7 +353,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "68bb42e3",
+   "id": "ac6a4e05",
    "metadata": {},
    "source": [
     "Now we successively apply `vmap` to simulate nested loops."
@@ -362,7 +362,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e62cd131",
+   "id": "f9fd95ee",
    "metadata": {
     "hide-output": false
    },
@@ -374,7 +374,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5ae91c8b",
+   "id": "6c48936c",
    "metadata": {},
    "source": [
     "Here’s a fully vectorized version of $ r_\\sigma $."
@@ -383,7 +383,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1e0cbb7c",
+   "id": "aab9ca95",
    "metadata": {
     "hide-output": false
    },
@@ -399,7 +399,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fbdf53c5",
+   "id": "2f10648c",
    "metadata": {},
    "source": [
     "Now we define the policy operator $ T_\\sigma $ going through similar steps"
@@ -408,7 +408,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "61d18534",
+   "id": "043e9b45",
    "metadata": {
     "hide-output": false
    },
@@ -441,7 +441,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9ebc9d63",
+   "id": "f8c7aa43",
    "metadata": {},
    "source": [
     "The function below computes the value $ v_\\sigma $ of following policy $ \\sigma $.\n",
@@ -480,7 +480,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3a6a7b3a",
+   "id": "673ea512",
    "metadata": {
     "hide-output": false
    },
@@ -512,7 +512,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9997fa21",
+   "id": "444ecd8b",
    "metadata": {},
    "source": [
     "Now we can define a function to compute $ v_{\\sigma} $"
@@ -521,7 +521,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f32d4828",
+   "id": "f768c9a9",
    "metadata": {
     "hide-output": false
    },
@@ -547,7 +547,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "336e9122",
+   "id": "38fb46b4",
    "metadata": {},
    "source": [
     "## Iteration\n",
@@ -558,7 +558,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2dfa59fd",
+   "id": "6ddfd337",
    "metadata": {
     "hide-output": false
    },
@@ -588,7 +588,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b7f962b3",
+   "id": "9f86b406",
    "metadata": {},
    "source": [
     "For OPI we’ll add a compiled routine that computes $ T_σ^m v $."
@@ -597,7 +597,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "316e7829",
+   "id": "a9fd386f",
    "metadata": {
     "hide-output": false
    },
@@ -618,7 +618,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4fbb94cc",
+   "id": "00ad9b8e",
    "metadata": {},
    "source": [
     "## Solvers\n",
@@ -631,7 +631,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "986821cc",
+   "id": "dfe67940",
    "metadata": {
     "hide-output": false
    },
@@ -650,7 +650,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "39df5fc2",
+   "id": "29831070",
    "metadata": {},
    "source": [
     "For OPI we will use a compiled JAX `lax.while_loop` operation to speed execution."
@@ -659,7 +659,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c9df5533",
+   "id": "c7507d7a",
    "metadata": {
     "hide-output": false
    },
@@ -697,7 +697,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7668e3e4",
+   "id": "e0302501",
    "metadata": {},
    "source": [
     "Here’s a friendly interface to OPI"
@@ -706,7 +706,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f227a156",
+   "id": "ded21ec0",
    "metadata": {
     "hide-output": false
    },
@@ -720,7 +720,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "be45b5a1",
+   "id": "4b5bf8d3",
    "metadata": {},
    "source": [
     "Here’s HPI."
@@ -729,7 +729,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "844c3e99",
+   "id": "45a29367",
    "metadata": {
     "hide-output": false
    },
@@ -754,7 +754,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4a6c1962",
+   "id": "84e8fd36",
    "metadata": {},
    "source": [
     "## Tests\n",
@@ -765,7 +765,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "81163f99",
+   "id": "a87a4385",
    "metadata": {
     "hide-output": false
    },
@@ -782,7 +782,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2253475a",
+   "id": "b5155487",
    "metadata": {
     "hide-output": false
    },
@@ -797,7 +797,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c7319ae3",
+   "id": "6eeb6987",
    "metadata": {},
    "source": [
     "We run it again to get rid of compile time."
@@ -806,7 +806,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6652d849",
+   "id": "55b82574",
    "metadata": {
     "hide-output": false
    },
@@ -821,7 +821,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "63232be1",
+   "id": "7fd937fb",
    "metadata": {
     "hide-output": false
    },
@@ -838,7 +838,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2f3d58d7",
+   "id": "36521959",
    "metadata": {
     "hide-output": false
    },
@@ -853,7 +853,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8841a5fe",
+   "id": "cb933c61",
    "metadata": {},
    "source": [
     "We run it again to eliminate compile time."
@@ -862,7 +862,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e4e6117a",
+   "id": "1589f163",
    "metadata": {
     "hide-output": false
    },
@@ -877,7 +877,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a9cfcbe7",
+   "id": "5bcadc65",
    "metadata": {
     "hide-output": false
    },
@@ -894,7 +894,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c729725d",
+   "id": "92fa076f",
    "metadata": {
     "hide-output": false
    },
@@ -909,7 +909,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "deb1d83e",
+   "id": "b1dfacfc",
    "metadata": {},
    "source": [
     "Let’s run it again to get rid of compile time."
@@ -918,7 +918,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "881ea948",
+   "id": "3eb8f567",
    "metadata": {
     "hide-output": false
    },
@@ -933,7 +933,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3411bac8",
+   "id": "471271d8",
    "metadata": {
     "hide-output": false
    },
@@ -949,7 +949,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "94a64e15",
+   "id": "14f430c1",
    "metadata": {},
    "source": [
     "We observe that all the solvers produce the same output from the above three plots.\n",
@@ -960,7 +960,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "aba9fd40",
+   "id": "414b416c",
    "metadata": {
     "hide-output": false
    },
@@ -980,7 +980,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dbf18766",
+   "id": "7911862a",
    "metadata": {
     "hide-output": false
    },
@@ -993,7 +993,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9904ce48",
+   "id": "5504d54e",
    "metadata": {
     "hide-output": false
    },
@@ -1010,7 +1010,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dd03dfc6",
+   "id": "71c108e5",
    "metadata": {
     "hide-output": false
    },
@@ -1033,7 +1033,7 @@
   }
  ],
  "metadata": {
-  "date": 1747018761.4759939,
+  "date": 1747720850.897495,
   "filename": "opt_savings_2.md",
   "kernelspec": {
    "display_name": "Python",
