--- a/job_search.ipynb
+++ b/job_search.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "eee86d54",
+   "id": "1ba494bc",
    "metadata": {},
    "source": [
     "# Job Search"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e7e5429d",
+   "id": "a542456f",
    "metadata": {},
    "source": [
     "# GPU\n",
@@ -37,7 +37,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3dc2a80e",
+   "id": "ff1c8af0",
    "metadata": {
     "hide-output": false
    },
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "621c26b3",
+   "id": "b7508b72",
    "metadata": {},
    "source": [
     "We use the following imports."
@@ -57,7 +57,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5bfee56a",
+   "id": "cdb1dc05",
    "metadata": {
     "hide-output": false
    },
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d1332b0b",
+   "id": "92ddc348",
    "metadata": {},
    "source": [
     "## Model\n",
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "046e4909",
+   "id": "a1ab0b16",
    "metadata": {},
    "source": [
     "### Set up\n",
@@ -111,7 +111,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0a4e91fd",
+   "id": "b2a00826",
    "metadata": {},
    "source": [
     "### Rewards\n",
@@ -137,7 +137,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0df6043c",
+   "id": "6de9bd5c",
    "metadata": {},
    "source": [
     "## Code\n",
@@ -148,7 +148,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "56345412",
+   "id": "56bc5032",
    "metadata": {
     "hide-output": false
    },
@@ -159,7 +159,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "de69ca5a",
+   "id": "1379d49e",
    "metadata": {},
    "source": [
     "The function below holds default values and populates the `namedtuple`."
@@ -168,7 +168,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0ef2144a",
+   "id": "80600adc",
    "metadata": {
     "hide-output": false
    },
@@ -189,7 +189,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "01f279ae",
+   "id": "b73e7cc4",
    "metadata": {},
    "source": [
     "Let’s test it:"
@@ -198,7 +198,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1eceb006",
+   "id": "f4177550",
    "metadata": {
     "hide-output": false
    },
@@ -210,7 +210,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b95059ae",
+   "id": "e3782f08",
    "metadata": {
     "hide-output": false
    },
@@ -222,7 +222,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4b7528a3",
+   "id": "f63b7496",
    "metadata": {
     "hide-output": false
    },
@@ -234,7 +234,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "570b73e8",
+   "id": "a5d97049",
    "metadata": {
     "hide-output": false
    },
@@ -245,7 +245,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "abb0a831",
+   "id": "7a19ffe5",
    "metadata": {},
    "source": [
     "Here’s the Bellman operator."
@@ -254,7 +254,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "340d0789",
+   "id": "480a571e",
    "metadata": {
     "hide-output": false
    },
@@ -277,7 +277,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dbe995f2",
+   "id": "16c43c73",
    "metadata": {},
    "source": [
     "The next function computes the optimal policy under the assumption that $ v $ is\n",
@@ -301,7 +301,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "db0b5151",
+   "id": "f7331e08",
    "metadata": {
     "hide-output": false
    },
@@ -319,7 +319,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bc15ab30",
+   "id": "27a95ddc",
    "metadata": {},
    "source": [
     "Here’s a routine for value function iteration."
@@ -328,7 +328,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "eed10f8d",
+   "id": "c4a245bb",
    "metadata": {
     "hide-output": false
    },
@@ -354,7 +354,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c2909816",
+   "id": "645827fd",
    "metadata": {},
    "source": [
     "## Computing the solution\n",
@@ -365,7 +365,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dc73a785",
+   "id": "b099f6c4",
    "metadata": {
     "hide-output": false
    },
@@ -379,7 +379,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "496b8ed8",
+   "id": "43a8d77d",
    "metadata": {},
    "source": [
     "Here’s the optimal policy:"
@@ -388,7 +388,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1750abbd",
+   "id": "f20f531d",
    "metadata": {
     "hide-output": false
    },
@@ -403,7 +403,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8b5551f8",
+   "id": "8d12787c",
    "metadata": {},
    "source": [
     "We compute the reservation wage as the first $ w $ such that $ \\sigma(w)=1 $."
@@ -412,7 +412,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c9f36441",
+   "id": "598ca42f",
    "metadata": {
     "hide-output": false
    },
@@ -425,7 +425,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "91953cb1",
+   "id": "1afb1165",
    "metadata": {
     "hide-output": false
    },
@@ -437,7 +437,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1b566519",
+   "id": "90884778",
    "metadata": {
     "hide-output": false
    },
@@ -448,7 +448,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2b2239c5",
+   "id": "704430d0",
    "metadata": {},
    "source": [
     "Here’s a joint plot of the value function and the reservation wage."
@@ -457,7 +457,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2cd24103",
+   "id": "04ee277f",
    "metadata": {
     "hide-output": false
    },
@@ -473,7 +473,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e1408e7c",
+   "id": "fc51e56f",
    "metadata": {},
    "source": [
     "## Exercise"
@@ -481,7 +481,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d3b628e4",
+   "id": "50e342e9",
    "metadata": {},
    "source": [
     "## Exercise 10.1\n",
@@ -517,7 +517,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8057b762",
+   "id": "b550b31c",
    "metadata": {
     "hide-output": false
    },
@@ -542,7 +542,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "94e10b1c",
+   "id": "4f5f3a43",
    "metadata": {},
    "source": [
     "Now you need to modify `T` and `get_greedy` and then run value function iteration again."
@@ -550,7 +550,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4b8de8a6",
+   "id": "21434046",
    "metadata": {},
    "source": [
     "## Solution to[ Exercise 10.1](https://jax.quantecon.org/#job_search_1)"
@@ -559,7 +559,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c9c6cb94",
+   "id": "0c55e007",
    "metadata": {
     "hide-output": false
    },
@@ -638,7 +638,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "808c9b3f",
+   "id": "623638d5",
    "metadata": {},
    "source": [
     "Let’s plot the results together with the original risk neutral case and see what we get."
@@ -647,7 +647,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "efc8c904",
+   "id": "4912b98f",
    "metadata": {
     "hide-output": false
    },
@@ -661,7 +661,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4118107e",
+   "id": "0a965715",
    "metadata": {
     "hide-output": false
    },
@@ -681,7 +681,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0208387a",
+   "id": "f6725d20",
    "metadata": {},
    "source": [
     "The figure shows that the reservation wage under risk sensitive preferences (RS $ \\bar w $) shifts down.\n",
@@ -692,7 +692,7 @@
   }
  ],
  "metadata": {
-  "date": 1747018761.040549,
+  "date": 1747720850.4653845,
   "filename": "job_search.md",
   "kernelspec": {
    "display_name": "Python",
